--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ const date = new Date();
 const year = date.getFullYear();
 ---
 
-<footer>
+<footer class="h-17">
     <ul>
 			{
 				navigation.map((item) => {
@@ -44,7 +44,6 @@ const year = date.getFullYear();
 
   footer {
     position: fixed;
-    height: auto;
     font-size: .65rem;
     bottom: 0;
     width: 100%;
