--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,20 +1,21 @@
 ---
 import Navigation from "./Navigation.astro";
-import {Icon} from "astro-icon/components";
-import type {INavigation} from "../types/navigation";
+import { Icon } from "astro-icon/components";
+import type { INavigation } from "../types/navigation";
 
 interface Props {
-	navigation: INavigation[];
+  navigation: INavigation[];
 }
 
-const {navigation} = Astro.props;
+const { navigation } = Astro.props;
 ---
 
-<header>
-    <a href="https://eckwerkstuttgart.de/">
-        <Icon name="logo"/>
-    </a>
-    <Navigation navigation={navigation} navigationPostion="header"/>
+<header class="h-24 w-full fixed flex justify-between items-center bg-primary z-50 p-7 pl-7 pr-7">
+  <a href="https://eckwerkstuttgart.de/" class="no-underline ">
+    <Icon name="logo" />
+  </a>
+
+  <Navigation navigation={navigation} navigationPostion="header" />
 </header>
 
 
@@ -22,27 +23,7 @@ const {navigation} = Astro.props;
   @import "./../styles/GlobalStyling";
 
   header {
-    height: 90px;
-    width: 100vw;
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background-color: $color-primary;
-    z-index: 1000;
-    padding: $spacing-l;
-
-    @include min-width("l") {
-      padding-left: $spacing-xxl;
-      padding-right: $spacing-xxl;
-    }
-
-    a {
-      text-decoration: none;
-      color: inherit;
-      padding: 0;
-      margin: 0;
-    }
 
     [data-icon] {
       font-size: 3rem;
