--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,20 @@
 ---
-import type {ImageMetadata} from "astro";
-import {getCollection} from "astro:content";
+import type { ImageMetadata } from "astro";
+import { getCollection } from "astro:content";
 import Layout from "../layouts/multi.astro";
 import "@fontsource-variable/montserrat";
 import "@fontsource-variable/fira-code";
 import "@fontsource-variable/source-code-pro";
-import '@fontsource-variable/source-sans-3';
-import '@fontsource/source-sans-pro';
+import "@fontsource-variable/source-sans-3";
+import "@fontsource/source-sans-pro";
 import "@fontsource/roboto";
 import "./../styles/GlobalStyling.scss";
-import Reviews from "../components/Reviews.astro";
+import "./../styles/global.css";
+
+import Carousel from "../components/Carousel.astro";
+import SectionIntro from "../components/SectionIntro.astro";
+import SectionContent from "../components/SectionContent.astro";
+import Reviews from "@/components/Reviews.astro";
 
 const pages = await getCollection("pages");
 
@@ -22,58 +27,46 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
 ---
 
 <Layout title="Eckwerk Stuttgart">
-    <section class="introimage" style={`background-image: url('${IntroImage.default.src}')`}>
-        <article>{pages[0].data.slogan && <h1>{pages[0].data.slogan}</h1>}</article>
-    </section>
 
-	{pages.map(async (originPage, index) => {
-		const {Content} = await originPage.render();
-		const imagePath = ParallaxImages[index % ParallaxImages.length];
-		const image = await ParallaxImagesSrc[imagePath]();
+  <SectionIntro title={pages[0].data.slogan} image={IntroImage.default.src} />
 
-		return originPage.data.mainStage === true ? (
-            <>
-                <section class="content" id={originPage.data.title}
-                         style={originPage.data.title !== "Kontakt" ? `background-image: url('${image.default.src}'); @media (max-width: 768px) { background-image: url('/path/to/mobile-image.jpg'); }` : null}>
-                    <article>
-                        <Content/>
-                    </article>
-                </section>
+  {pages.map(async (originPage, index) => {
+    const { Content } = await originPage.render();
+    const imagePath = ParallaxImages[index % ParallaxImages.length];
+    const image = await ParallaxImagesSrc[imagePath]();
+
+    return originPage.data.mainStage === true ? (
+      <>
+        <SectionContent id={originPage.data.title} style={`background-image: url('${image.default.src}'); @media (max-width: 768px) { background-image: url('/path/to/mobile-image.jpg'); }`}>
+          <Content />
+        </SectionContent>
+
+        {index === 3 &&
+          <section class="max-content bg-white">
+              <article>
+                <Reviews />
+              </article>
+            </section>
 
 
-							{index === 3 &&
-                      <section class="subcontent">
-                          <article>
-                              <Reviews/>
-                          </article>
-                      </section>
-							}
-            </>
-		) : null;
-	})}
+        }
+      </>
+    ) : null;
+  })}
 </Layout>
 
 <style lang="scss" is:global>
   @import "./../styles/GlobalStyling";
 
   section {
-    min-height: calc(100vh + 50vh);
-    background-attachment: fixed;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    scroll-margin-top: 8vh;
     background-color: $color-white;
-
-    @include min-width("s") {
-      background-position: 50% 50%;
-    }
-
-    @include min-width("m") {
-      background-position: 25%;
-    }
+    background-repeat: no-repeat;
+    scroll-margin-top: 8vh;
 
     @include min-width("l") {
+      background-attachment: fixed;
+      background-size: cover;
+      background-position: 50%;
       scroll-margin-top: 24vh;
       background-position: 25%;
     }
@@ -121,69 +114,25 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
       }
     }
 
-    &.subcontent {
-      min-height: 65vh;
-      height: auto;
-      background-color: $color-white;
-
-      article {
-        background-color: $color-white;
-      }
-    }
-
-    &.introimage {
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-position: 50%;
+    &.carousel {
+      width: 100vw;
+      min-height: max-content;
+      padding: 2vh 0 3vh 0;
 
       @include min-width("s") {
-        background-position: 50%;
+        padding: 2vh 0 3vh 0;
       }
 
       @include min-width("m") {
-        background-position: 45%;
+        padding: 4vh 0 5vh 0;
       }
 
       @include min-width("l") {
-        background-position: 45%;
+        padding: 4vh 0 5vh 0;
       }
 
       @include min-width("xl") {
-        background-position: 45%;
-      }
-
-      article {
-        background-color: unset;
-        padding: 1rem 1rem 40vh 1rem;
-
-        @include min-width("s") {
-          padding: 1rem 1rem 35vh 1rem;
-        }
-
-        h1 {
-          font-size: 2rem;
-          font-weight: 400;
-          color: $color-white;
-          text-align: center;
-
-          @include min-width("s") {
-            font-size: 2.75rem !important;
-          }
-
-          @include min-width("m") {
-            font-size: 4rem !important;
-          }
-
-          @include min-width("l") {
-            font-size: 5rem !important;
-          }
-
-          @include min-width("xl") {
-            font-size: 7rem !important;
-          }
-        }
+        padding: 4vh 0 5vh 0;
       }
     }
 
@@ -193,3 +142,22 @@ const IntroImage = await IntroImagesSrc[IntroImages[0]]();
   }
 
 </style>
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const mediaQueryM = window.matchMedia("(min-width: 768px)");
+
+    if (mediaQueryM.matches) {
+      const sections = document.querySelectorAll("section.content");
+
+      sections.forEach((section, index) => {
+        const article = section.querySelector("article");
+        if (article && article.id !== "Kontakt" && index !== sections.length - 1) {
+          const articleHeight = article.offsetHeight;
+          // @ts-ignore
+          section.style.height = `calc(${articleHeight}px + 50vh)`;
+        }
+      });
+    }
+  });
+</script>
