--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
-import Navigation from "./Navigation.astro";
+import Navigation from "@/components/Navigation.astro";
 import { Icon } from "astro-icon/components";
-import type { INavigation } from "../types/navigation";
+import type { INavigation } from "@/types/navigation";
 
 interface Props {
   navigation: INavigation[];
