--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,5 @@
 ---
-import type { INavigation } from "../types/navigation";
+import type { INavigation } from "@/types/navigation";
 import { Icon } from "astro-icon/components";
 
 interface Props {
@@ -11,7 +11,7 @@ const { navigation } = Astro.props;
 const { navigationPostion } = Astro.props;
 ---
 
-<nav class="navbar  ">
+<nav class="navbar">
   <div class="navbar-display">
     <ul>
       {
