--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,33 +1,26 @@
 ---
-import Navigation from "@/components/Navigation.astro";
-import { Icon } from "astro-icon/components";
-import type { INavigation } from "@/types/navigation";
+import Navigation from '@/components/Navigation.astro'
+import { Icon } from 'astro-icon/components'
+import type { INavigation } from '@/types/navigation'
 
 interface Props {
-  navigation: INavigation[];
+	navigation: INavigation[]
 }
 
-const { navigation } = Astro.props;
+const { navigation } = Astro.props
 ---
 
-<header class="h-24 w-full fixed flex justify-between items-center bg-primary z-50 p-7 pl-7 pr-7">
-  <a href="https://eckwerkstuttgart.de/" class="no-underline ">
-    <Icon name="logo" />
-  </a>
+<header class="fixed z-50 flex h-24 w-full items-center justify-between bg-primary p-7 pl-7 pr-7">
+	<a href="https://eckwerkstuttgart.de/" class="no-underline">
+		<Icon name="logo" />
+	</a>
 
-  <Navigation navigation={navigation} navigationPostion="header" />
+	<Navigation navigation={navigation} navigationPostion="header" />
 </header>
 
-
 <style lang="scss">
-  @import "./../styles/GlobalStyling";
-
-  header {
-    background-color: $color-primary;
-
-    [data-icon] {
-      font-size: 3rem;
-      z-index: 1000;
-    }
-  }
+	[data-icon] {
+		font-size: 3rem;
+		z-index: 1000;
+	}
 </style>
