--- a/src/layouts/multi.astro
+++ b/src/layouts/multi.astro
@@ -1,65 +1,52 @@
 ---
-import { getCollection } from "astro:content";
-import type { INavigation } from "@/types/navigation";
-import Header from "@/components/Header.astro";
-import Footer from "@/components/Footer.astro";
-import GoBack from "@/components/GoBack.astro";
-import { GoogleTagmanager, GoogleTagmanagerNoscript } from "@digi4care/astro-google-tagmanager";
+import { getCollection } from 'astro:content'
+import type { INavigation } from '@/types/navigation'
+import Header from '@/components/Header.astro'
+import Footer from '@/components/Footer.astro'
+import GoBack from '@/components/GoBack.astro'
+import GalleryModal from '@/components/GalleryModal.astro'
 
 interface Props {
-  title: string;
+	title: string
 }
 
-const { title } = Astro.props;
+const { title } = Astro.props
 
-const pages = await getCollection("pages");
+const pages = await getCollection('pages')
 
 const navigation: INavigation[] = pages.map(
-  (page: any): INavigation => ({
-    page: page,
-    title: page.data.title,
-    navigation: page.data.navigation,
-    slug: page.slug
-  })
-);
+	(page: any): INavigation => ({
+		page: page,
+		title: page.data.title,
+		navigation: page.data.navigation,
+		slug: page.slug
+	})
+)
 
-const navigationHeader = navigation.filter((nav) =>
-  nav.navigation?.includes("Header")
-);
-
-const navigationFooter = navigation.filter((nav) =>
-  nav.navigation?.includes("Footer")
-);
+const navigationHeader = navigation.filter((nav) => nav.navigation?.includes('Header'))
+const navigationFooter = navigation.filter((nav) => nav.navigation?.includes('Footer'))
 ---
 
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="description" content="Astro description" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="generator" content={Astro.generator} />
-  <link rel="icon" type="image/svg+xml" href="/favicon-mode-dark.svg" />
-  <base href={import.meta.env.BASE_URL} />
-  <title>{title}</title>
-  <GoogleTagmanager id="GTM-TMM9XNTK" domain="https://eckwerkstuttgart.de/"
-                    container="custom-container.js" />
-</head>
-<body>
-<GoogleTagmanagerNoscript id="GTM-TMM9XNTK" domain="https://eckwerkstuttgart.de/" />
-<Header navigation={navigationHeader} />
-<main>
-  <slot />
-</main>
-<GoBack />
-<Footer navigation={navigationFooter} />
-</body>
+<html lang="en" class="h-full overflow-hidden">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="description" content="Astro description" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="generator" content={Astro.generator} />
+		<link rel="icon" type="image/svg+xml" href="/favicon-mode-dark.svg" />
+		<base href={import.meta.env.BASE_URL} />
+		<title>{title}</title>
+	</head>
+	<body class="h-full overflow-hidden">
+		<Header navigation={navigationHeader} />
+		<main class="relative h-screen w-screen overflow-y-auto overflow-x-hidden scroll-smooth">
+			<slot />
+		</main>
+		<GoBack />
+		<Footer navigation={navigationFooter} />
+		<GalleryModal />
+	</body>
 </html>
 
-<style lang="scss">
-  main {
-    width: 100%;
-    position: absolute;
-    right: 0;
-  }
-</style>
+<style></style>
