--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -1,20 +1,12 @@
 ---
-import Layout from "../layouts/single.astro";
-import "@fontsource-variable/montserrat";
-import "@fontsource-variable/fira-code";
-import "@fontsource-variable/source-code-pro";
-import "@fontsource/source-sans-pro";
-import "@fontsource/roboto";
-import "@/styles/GlobalStyling.scss";
+import Layout from '../layouts/single.astro'
+import '@fontsource-variable/montserrat'
+import '@fontsource-variable/fira-code'
+import '@fontsource-variable/source-code-pro'
+import '@fontsource/source-sans-pro'
+import '@fontsource/roboto'
 ---
 
 <Layout title="Eckwerk Stuttgart">
-  <main>
-    Hallo
-  </main>
+	<main>Hallo</main>
 </Layout>
-
-<style lang="scss" is:global>
-  @import "./../styles/GlobalStyling";
-</style>
-
