--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,10 +3,26 @@
 @tailwind utilities;
 
 @layer base {
-    h1 { @apply text-4xl font-bold; }
-    h2 { @apply text-3xl font-semibold; }
-    h3 { @apply text-2xl font-medium; }
-    h4 { @apply text-xl font-medium; }
-    h5 { @apply text-lg font-normal; }
-    h6 { @apply text-base font-normal; }
+    h1 { @apply font-montserrat font-normal text-4xl sm:text-5xl md:text-6xl pb-7 }
+    h3 { @apply text-2xl font-medium }
+    h4 { @apply text-xl font-medium }
+    h5 { @apply text-lg font-normal }
+    h6 { @apply text-base font-normal }
+    body { @apply font-light text-lg }
+    strong { @apply font-semibold }
+}
+
+section > article > div.logo>p {@apply py-4 gap-4 flex flex-col md:flex-row}
+
+main {
+    @apply
+    bg-white
+}
+
+button {
+    @apply
+    cursor-pointer
+    transition duration-[600ms]
+    ease-in-out
+    bg-transparent
 }
