Add tailwind import aliases and more

--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -37,7 +37,7 @@ const reviews: Review[] = await fetchReviews()
 <div class="h-max">
 	<h1>Google Reviews</h1>
 	<div class="container relative m-auto">
-		<div class="relative flex justify-center gap-8">
+		<div class="relative flex justify-center gap-4 sm:gap-8">
 			<button class="prev m-0 p-0 text-2xl font-bold hover:text-secondary" id="prevButton">
 				<Icon name="line-md:chevron-left" />
 			</button>
