--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,17 +10,12 @@ interface Props {
 const { navigation } = Astro.props
 ---
 
-<header class="fixed z-50 flex h-24 w-full items-center justify-between bg-primary p-7 pl-7 pr-7">
-	<a href="https://eckwerkstuttgart.de/" class="no-underline">
+<header
+	class="fixed z-50 flex h-24 w-full items-center justify-between bg-primary px-6 contain-content last:min-h-max sm:px-12 md:px-16"
+>
+	<a href="https://eckwerkstuttgart.de/" class="-z-50 text-5xl no-underline">
 		<Icon name="logo" />
 	</a>
 
 	<Navigation navigation={navigation} navigationPostion="header" />
 </header>
-
-<style lang="scss">
-	[data-icon] {
-		font-size: 3rem;
-		z-index: 1000;
-	}
-</style>
