--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -32,7 +32,7 @@ const { imageDesktop, imageMobil } = await getIntroImages(introImagesSrc)
 ---
 
 <>
-	<div class="h-auto pt-20 md:h-full">
+	<div class="h-auto md:h-full">
 		<picture>
 			<source media="(max-width: 767px)" srcset={imageMobil} />
 			<source media="(min-width: 768px)" srcset={imageDesktop} />
@@ -40,9 +40,13 @@ const { imageDesktop, imageMobil } = await getIntroImages(introImagesSrc)
 		</picture>
 	</div>
 
-	<h1
-		class="sm:text-3sxl lg:text-10xl absolute inset-0 flex items-center justify-center break-normal pb-28 text-center text-5xl text-white sm:pb-40 sm:text-5xl md:pb-36 md:text-6xl xl:pb-80 xl:text-9xl"
+	<div
+		class="absolute inset-0 flex items-center justify-center break-normal break-keep tracking-tight lg:tracking-tight"
 	>
-		{title}
-	</h1>
+		<h1
+			class="2xl:text-9xs pb-64 text-center text-6xl text-white sm:pb-56 sm:text-6xl md:pb-64 md:text-6xl lg:pb-96 lg:text-7xl xl:text-8xl 2xl:pb-96"
+		>
+			{title}
+		</h1>
+	</div>
 </>
