--- a/src/components/SectionContent.astro
+++ b/src/components/SectionContent.astro
@@ -4,7 +4,6 @@ interface Props {
 	onlyPass?: boolean
 	withoutImages?: boolean
 	images?: string[] | null
-	classes?: string
 }
 
 /**
@@ -16,13 +15,13 @@ const imageDesktop = images ? images[0] : ''
 const imageMobile = images ? images[1] : ''
 ---
 
-<section class={`relative scroll-m-52 last:pb-52 ${classes}`} id={id}>
+<section class="relative scroll-m-52" id={id}>
 	{
 		onlyPass ? (
 			<slot />
 		) : (
 			<>
-				<article class="text-l md:py-18 bg-white px-8 py-10 contain-content last:min-h-max sm:px-12 sm:py-14 md:px-16 lg:px-32 lg:py-28">
+				<article class="text-l md:py-18 bg-white px-6 py-10 contain-content last:min-h-max sm:px-12 sm:py-14 md:px-16 lg:px-36 lg:py-28 xl:px-52">
 					<slot />
 				</article>
 				{images !== null && !withoutImages ? (
