Add tailwind import aliases and more

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,9 +11,9 @@ const { navigation } = Astro.props
 ---
 
 <header
-	class="fixed z-50 flex h-24 w-full items-center justify-between bg-primary px-6 contain-content last:min-h-max sm:px-12 md:px-16"
+	class="fixed z-50 flex h-24 w-full items-center justify-between bg-primary px-6 sm:px-12 md:px-16"
 >
-	<a href="https://eckwerkstuttgart.de/" class="-z-50 text-5xl no-underline">
+	<a href="https://eckwerkstuttgart.de/" class="z-50 text-5xl no-underline">
 		<Icon name="logo" />
 	</a>
 
