--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ const year = date.getFullYear()
 ---
 
 <footer class="fixed bottom-0 w-full bg-primary p-4 px-6 text-xs text-white sm:px-12 md:px-16">
-	<ul class="m-0 flex list-none gap-4 p-0 lg:justify-center lg:pb-0 lg:text-center">
+	<ul class="m-0 flex list-none gap-4 p-0 md:justify-center md:pb-0 md:text-center">
 		{
 			navigation.map((item) => {
 				return (
