--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -47,6 +47,12 @@ const imagePaths = Object.keys(images).filter((imagePath) => {
 	}
 </div>
 
+<style>
+	.pswp--custom-bg {
+		--pswp-bg: #fff;
+	}
+</style>
+
 <script>
 	import PhotoSwipeLightbox from 'photoswipe/lightbox'
 	import 'photoswipe/style.css'
@@ -68,6 +74,8 @@ const imagePaths = Object.keys(images).filter((imagePath) => {
 		wheelToZoom: false,
 		showHideOpacity: false,
 		counter: false,
+		bgOpacity: 0.75,
+		mainClass: 'pswp--custom-bg',
 		pswpModule: () => import('photoswipe')
 	})
 
@@ -78,6 +86,8 @@ const imagePaths = Object.keys(images).filter((imagePath) => {
 		() => {
 			lightbox.init()
 		},
-		{ once: true }
+		{
+			once: true
+		}
 	)
 </script>
