--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -45,7 +45,7 @@ const reviews: Review[] = await fetchReviews()
 				{
 					reviews.map((review, index) => (
 						<div class={`item ${index === 0 ? 'block' : 'hidden'}`}>
-							<div class="review fade flex flex-col gap-4 px-0 py-10">
+							<div class="review fade flex min-h-80 flex-col gap-4 px-0 py-10">
 								<a href={review.author_url} target="_blank">
 									<h3>{review.author_name}</h3>
 								</a>
