--- a/src/pages/datenschutz.astro
+++ b/src/pages/datenschutz.astro
@@ -5,7 +5,6 @@ import "@fontsource-variable/montserrat";
 import "@fontsource-variable/source-code-pro";
 import '@fontsource/source-sans-pro';
 import "@fontsource/roboto";
-import "./../styles/GlobalStyling.scss";
 
 const pages = await getCollection("pages");
 const page = pages.find(page => page.slug === "page-6-datenschutz");
@@ -17,40 +16,9 @@ if (page) {
 ---
 
 <Layout title="Eckwerk Stuttgart">
-    <section>
-        <article>
-					{Content &&
-                  <Content/>}
-        </article>
-    </section>
+  <section class="flex my-[20vh]">
+    <article class="p-[2vh_5vw_3vh_5vw] sm:p-[2vh_5vw_3vh_5vw] md:p-[4vh_10vw_5vh_10vw] lg:p-[4vh_15vw_5vh_15vw] xl:p-[4vh_15vw_5vh_15vw]">
+      {Content && <Content />}
+    </article>
+  </section>
 </Layout>
-
-<style lang="scss">
-  @import "./../styles/GlobalStyling";
-
-  section {
-    display: flex;
-    margin: 20vh 0;
-
-
-    article {
-      padding: 2vh 5vw 3vh 5vw;
-
-      @include min-width("s") {
-        padding: 2vh 5vw 3vh 5vw;
-      }
-
-      @include min-width("m") {
-        padding: 4vh 10vw 5vh 10vw;
-      }
-
-      @include min-width("l") {
-        padding: 4vh 15vw 5vh 15vw;
-      }
-
-      @include min-width("xl") {
-        padding: 4vh 15vw 5vh 15vw;
-      }
-    }
-  }
-</style>
