--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,9 +11,9 @@ const { navigation } = Astro.props
 ---
 
 <header
-	class="absolute left-0 top-0 z-50 flex h-24 w-full items-center justify-between bg-primary px-6 sm:px-12 md:px-16"
+	class="absolute left-0 top-0 z-50 flex h-16 sm:h-24 w-screen align-middle items-center justify-between bg-primary px-6 sm:px-12 md:px-16"
 >
-	<a href="https://eckwerkstuttgart.de/" class="z-50 text-5xl no-underline">
+	<a href="https://eckwerkstuttgart.de/" class="z-50 text-3xl sm:text-5xl no-underline">
 		<Icon name="logo" />
 	</a>
 
