--- a/src/layouts/multi.astro
+++ b/src/layouts/multi.astro
@@ -28,7 +28,7 @@ const navigationFooter = navigation.filter((nav) => nav.navigation?.includes('Fo
 ---
 
 <!doctype html>
-<html lang="en" class="h-full overflow-hidden">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
@@ -38,12 +38,11 @@ const navigationFooter = navigation.filter((nav) => nav.navigation?.includes('Fo
 		<base href={import.meta.env.BASE_URL} />
 		<title>{title}</title>
 	</head>
-	<body class="h-full overflow-hidden">
+	<body>
 		<Header navigation={navigationHeader} />
-		<main class="relative mt-24 h-screen w-screen overflow-y-auto overflow-x-hidden scroll-smooth">
+		<main class="absolute h-full w-full overflow-y-scroll overflow-x-hidden scroll-smooth">
 			<slot />
 		</main>
-		<GoBack />
 		<Footer navigation={navigationFooter} />
 		<GalleryModal />
 	</body>
