Fix ui glitches

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ const { navigation } = Astro.props
 ---
 
 <header
-	class="absolute left-0 top-0 z-50 flex h-16 sm:h-24 w-screen align-middle items-center justify-between bg-primary px-6 sm:px-12 md:px-16"
+	class="top-0 bottom-0 z-50 flex h-16 sm:h-24 w-screen align-middle items-center justify-between bg-primary px-6 sm:px-12 md:px-16"
 >
 	<a href="https://eckwerkstuttgart.de/" class="z-50 text-3xl sm:text-5xl no-underline">
 		<Icon name="logo" />
