--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const mainStagePages = pages.filter((page) => page.data.mainStage === true)
 ---
 
 <Layout title="Eckwerk Stuttgart">
-	<div class="mb-40">
+  <div>
 		<SectionContent onlyPass>
 			<Intro title={pages[0].data.slogan} />
 		</SectionContent>
@@ -73,5 +73,5 @@ const mainStagePages = pages.filter((page) => page.data.mainStage === true)
 				) : null
 			})
 		}
-	</div>
+  </div>
 </Layout>
