--- a/src/components/SectionContent.astro
+++ b/src/components/SectionContent.astro
@@ -15,7 +15,7 @@ const imageDesktop = images ? images[0] : ''
 const imageMobile = images ? images[1] : ''
 ---
 
-<section class="relative scroll-m-52" id={id}>
+<section class="relative h-auto scroll-m-52" id={id}>
 	{
 		onlyPass ? (
 			<slot />
