Fix ui glitches

--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -28,7 +28,7 @@ const imagePaths = shuffleArray(Object.keys(images))
 									alt={'altText'}
 									width={400}
 									height={300}
-									class="hover:bore absolute left-0 top-0 h-full w-full object-cover hover:border-4 hover:border-secondary"
+									class="hover:bore left-0 top-0 h-full w-full object-cover hover:border-4 hover:border-secondary"
 								/>
 							</a>
 						</li>
