--- a/src/components/GoBack.astro
+++ b/src/components/GoBack.astro
@@ -4,7 +4,7 @@ import { Icon } from 'astro-icon/components'
 
 <div
 	id="scrollToolBox"
-	class="fixed right-0 top-0 z-[900] flex hidden h-screen flex-col justify-end gap-4 pb-48 pr-4 md:pb-24"
+	class="fixed right-0 top-0 z-[900] flex hidden h-full flex-col justify-end gap-4 pb-48 pr-4 md:pb-24"
 >
 	<a
 		id="scrollnextTopSection"
