--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -16,8 +16,8 @@ if (page) {
 ---
 
 <Layout title="Eckwerk Stuttgart">
-    <section class="flex my-[20vh]">
-        <article class="p-[2vh_5vw_3vh_5vw] sm:p-[2vh_5vw_3vh_5vw] md:p-[4vh_10vw_5vh_10vw] lg:p-[4vh_15vw_5vh_15vw] xl:p-[4vh_15vw_5vh_15vw]">
+    <section >
+        <article >
 					{Content &&
                   <Content/>}
         </article>
