--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -39,7 +39,7 @@ const { navigation, navigationPostion } = Astro.props as Props
 
 		<div
 			id="navbarMenu"
-			class="absolute left-0 top-0 z-30 h-screen w-screen translate-x-full transform bg-primary transition-transform duration-300 ease-in-out"
+			class="absolute hidden left-0 top-0 z-30 h-screen w-screen translate-x-full transform bg-primary transition-transform duration-300 ease-in-out"
 		>
 			<ul class="flex h-full flex-col justify-center gap-8 p-8">
 				{
@@ -74,11 +74,13 @@ const { navigation, navigationPostion } = Astro.props as Props
 		}
 
 		const toggleMenu = () => {
+      navbarMenu.classList.toggle('hidden')
 			navbarMenu.classList.toggle('translate-x-full')
 		}
 
 		const closeMenu = () => {
 			navbarMenu.classList.add('translate-x-full')
+      navbarMenu.classList.toggle('hidden')
 		}
 
 		navbarToggle.addEventListener('click', toggleMenu)
