--- a/src/components/SectionContent.astro
+++ b/src/components/SectionContent.astro
@@ -15,7 +15,7 @@ const imageDesktop = images ? images[0] : ''
 const imageMobile = images ? images[1] : ''
 ---
 
-<section class="relative h-auto scroll-m-52" id={id}>
+<section class="relative w-full scroll-m-52" id={id}>
 	{
 		onlyPass ? (
 			<slot />
@@ -25,14 +25,14 @@ const imageMobile = images ? images[1] : ''
 					<slot />
 				</article>
 				{images !== null && !withoutImages ? (
-					<div class="inset-0 h-max w-max">
+					<div class="inset-0">
 						<picture>
 							<source media="(max-width: 767px)" srcset={imageMobile} />
 							<source media="(min-width: 768px)" srcset={imageDesktop} />
 							<img
 								src={imageMobile}
 								alt="Content Image"
-								class="w-screen object-cover sm:aspect-auto lg:h-screen"
+								class="w-full object-cover sm:aspect-auto lg:h-full"
 							/>
 						</picture>
 					</div>
