--- a/src/components/GalleryModal.astro
+++ b/src/components/GalleryModal.astro
@@ -6,7 +6,7 @@ const albumNames = ['Wohnhandwerk', 'Baumpflege', 'Terrassenbau']
 ---
 
 <div
-	class="absolute left-0 top-0 z-[1000] hidden h-screen w-screen bg-white p-2 xl:p-4"
+	class="absolute left-0 top-0 z-[1000] hidden h-full w-full bg-white p-2 xl:p-4"
 	id="galleryModal"
 >
 	<div class="flex h-full flex-row gap-4">
